--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
 
-        <activity android:name=".cocos2dxOuya"
+        <activity android:name="HelloOuya"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
