--- a/proj.android/.cproject
+++ b/proj.android/.cproject
@@ -27,9 +27,9 @@
 							</tool>
 							<tool id="org.eclipse.cdt.build.core.settings.holder.1949967466" name="GNU C++" superClass="org.eclipse.cdt.build.core.settings.holder">
 								<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.916047822" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
-									<listOptionValue builtIn="false" value="/Applications/Android/android-ndk-r8e/platforms/android-14/arch-arm/usr/include"/>
-									<listOptionValue builtIn="false" value="/Users/giginet/cocos2d-x-2.1.4/cocos2dx/include"/>
-									<listOptionValue builtIn="false" value="/Users/giginet/cocos2d-x-2.1.4/cocos2dx"/>
+									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_HOME}/cocos2dx/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_HOME}/cocos2dx&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${NDK_ROOT}/platforms/android-14/arch-arm/usr/include&quot;"/>
 								</option>
 								<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1195311229" languageId="org.eclipse.cdt.core.g++" languageName="GNU C++" sourceContentType="org.eclipse.cdt.core.cxxSource,org.eclipse.cdt.core.cxxHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 							</tool>
